kubernetes_deployment/live/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operations-engineering-reports-ingress
  namespace: operations-engineering
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: operations-engineering-reports-ingress-operations-engineering-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - operations-engineering-reports.cloud-platform.service.justice.gov.uk
  rules:
    - host: operations-engineering-reports.cloud-platform.service.justice.gov.uk
      http:
        paths:
        - backend:
            service:
              name: operations-engineering-reports-service
              port:
                number: 4567
          path: /
          pathType: ImplementationSpecific
